crates/rspyts-macros/tests/ui/tuple_enum_variant.rs
use rspyts::bridge;

#[bridge]
pub enum Pair {
    Both(u32, u32),
}

fn main() {}
